--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,3 +34,49 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      # Set up Python 3.7.13
+      - name: Setup Python 3.7.13
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7.13
+
+      # Install python dependency
+      - name: Install python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests python-owasp-zap-v2.4
+
+      - name: Get Working Dir
+        run: echo $(PWD)
+
+      # Set up ZAP
+      - name: Install OWASP ZAP
+        run: |
+          mkdir -p ./zap
+          cd ./zap
+          wget -N https://github.com/zaproxy/zaproxy/releases/download/v2.11.1/ZAP_2.11.1_Linux.tar.gz
+          tar -zxvf ZAP_2.11.1_Linux.tar.gz
+          rm ZAP_2.11.1_Linux.tar.gz
+          echo 'export PATH_ZAP_SH=./zap/ZAP_2.11.1/zap.sh' >> ~/.bashrc
+          echo 'export ZAP_PORT=8090' >> ~/.bashrc
+          echo 'sh -c "$PATH_ZAP_SH -daemon -host 0.0.0.0 -port $ZAP_PORT -configfile ./zap/ZAP_2.9.0/conf" > /dev/null & ' > start-zap
+          echo 'sleep 40' >> start-zap
+          echo 'pkill -f zap' > stop-zap
+          chmod +x start-zap
+          chmod +x stop-zap
+          echo $pwd
+      
+      # Run ZAP in daemon mode
+      - name: Run ZAP Daemon
+        run: ./zap/ZAP_2.11.1/zap.sh -daemon -host 0.0.0.0 -port 8090 -config api.addrs.addr.name=".*" -config api.addrs.addr.regex=true -config api.key=12345 -addoninstall ascanrulesAlpha -addoninstall ascanrulesBeta -addoninstall network > /dev/null &
+      - name: Sleep for a bit
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '20s'
+
+      - name: Run Bash Script to get ZAP Stats
+        run: bash e2eTest.sh
+
+
+      
